<resources>
    <string name="app_name">Poptron</string>
    <string name="welcome_to">Welcome to</string>
    <string name="poptron">poptron</string>
    <string name="let_s_start">let\'s start</string>
    <string name="curated">Curated</string>
    <string name="a_lifestyle_marketplace_full_of">A lifestyle marketplace full of</string>
    <string name="verified_brands_and_quality_products">verified brands and quality products</string>
    <string name="community">Community</string>
    <string name="a_vibrant_community_of_real_people">A vibrant community of real people</string>
    <string name="connecting_with_real_brands">connecting with real brands</string>
    <string name="content">Content</string>
    <string name="find_out_what_s_happening">Find out what\'s happening</string>
    <string name="in_the_scene_around_you">in the scene around you</string>
    <string name="get_started">GET STARTED</string>
    <string name="login">Login</string>
    <string name="hi">Hi,</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_poptron_account">Don\'t have Poptron account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="regEmail">Email</string>
    <string name="phone">Phone</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="done">DONE</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="news">NEWS</string>
    <string name="homeFragment">Home</string>
    <string name="searchFragment">Search</string>
    <string name="account">Account</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
    <string name="profile">Profile</string>
    <string name="payments">Payments</string>
    <string name="orders">Orders</string>
    <string name="chat">Chat</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="News">News</string>
    <string name="idHome">Home</string>
    <string name="idSearch">Search</string>

</resources>