<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hi"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FilledTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeback"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FilledTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FilledTextField"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgetpassbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/FilledTextField2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/forgetpassbtn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/log_in"
        app:backgroundTint="@color/purple_200" />

    <TextView
        android:id="@+id/dhp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/don_t_have_poptron_account"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signupbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@id/dhp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        />

</RelativeLayout>