<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment3">

    <ImageView
        android:id="@+id/pv3"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/vp3" />

    <TextView
        android:id="@+id/con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pv3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/con"
        android:layout_centerHorizontal="true"
        android:text="@string/find_out_what_s_happening"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_centerHorizontal="true"
        android:text="@string/in_the_scene_around_you"
        android:textSize="18sp" />


</RelativeLayout>