<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2">

    <ImageView
        android:id="@+id/pv2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/vp2" />

    <TextView
        android:id="@+id/com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pv2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/community"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com"
        android:layout_centerHorizontal="true"
        android:text="@string/a_vibrant_community_of_real_people"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:text="@string/connecting_with_real_brands"
        android:textSize="18sp" />


</RelativeLayout>