<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <ImageView
        android:id="@+id/pv1"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/vp1"
         />

    <TextView
        android:id="@+id/cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pv1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/curated"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cur"
        android:layout_centerHorizontal="true"
        android:text="@string/a_lifestyle_marketplace_full_of"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_centerHorizontal="true"
        android:text="@string/verified_brands_and_quality_products"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/txt4"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>


</RelativeLayout>