<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/spimg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/poptron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="70dp"
        android:layout_marginTop="0dp"
        android:text="@string/poptron"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="italic" />

    <Button
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_below="@id/poptron"
        android:layout_marginStart="80dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/let_s_start"
        android:textAllCaps="true"
        android:textColor="@color/black" />

</RelativeLayout>