<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/account"
        app:titleTextColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/proimg" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profilename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@id/profileimg"
        android:text="Monisha "
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilename"
        android:layout_marginStart="132dp"
        android:text="monisha@gmail.com"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="270dp"
        android:src="@drawable/ic_right_arrow"

        />

    <TextView
        android:id="@+id/protxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailtxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/protxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/ic_right_arrow"

        />

    <TextView
        android:id="@+id/paytxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/protxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/payments"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/paytxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="365dp"
        android:src="@drawable/ic_right_arrow"

        />

    <TextView
        android:id="@+id/ordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paytxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/orders"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ordtxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="415dp"
        android:src="@drawable/ic_right_arrow"

        />

    <TextView
        android:id="@+id/chattxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ordtxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/chat"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/chattxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="460dp"
        android:src="@drawable/ic_right_arrow" />

    <TextView
        android:id="@+id/faqtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chattxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/faq"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/faqtxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="510dp"
        android:src="@drawable/ic_right_arrow" />

    <TextView
        android:id="@+id/suptxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/faqtxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/support"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/suptxt"
        android:background="@color/grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="550dp"
        android:src="@drawable/ic_right_arrow" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suptxt"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/logout"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="510dp"
        android:src="@drawable/ic_right_arrow" />


</RelativeLayout>